--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "match-sorter": "^6.3.1",
     "prisma": "^4.14.1",
     "react": "^18.2.0",
-    "react-code-blocks": "^0.0.9-0",
+    "react-code-blocks": "^0.1.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-syntax-highlighter": "^15.5.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^0.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
